files-api YAML specification revisions.  Corrected use of UMLS CUIs for age and race to use grouping values. Synchronous response fixes for verification. Remove unused route.
